--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
   "name": "proto-moto.js",
   "version": "0.0.1",
-  "main": "src/proto-moto.js"
+  "main": "src/proto-moto.js",
+  "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.7.2",
+    "chai": "^3.5.0",
+    "jscs": "^2.11.0",
+    "mocha": "^2.4.5",
+    "require-all": "^2.0.0",
+    "rimraf": "^2.5.2",
+    "uglifyjs": "^2.4.10"
+  },
+  "scripts": {
+    "build": "npm run clean && babel src --out-file dist/proto-moto.js && npm run uglify",
+    "uglify": "uglifyjs dist/proto-moto.js -m -c warnings=false -o dist/proto-moto.min.js",
+    "clean": "rimraf dist/* && mkdir dist || true",
+    "test": "npm run lint && mocha --compilers js:babel-register test/index.js",
+    "lint": "jscs src && jscs test"
+  }
 }
