--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "main": "src/proto-moto.js",
   "devDependencies": {
-    "babel-cli": "^6.6.5",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.7.2",
     "chai": "^3.5.0",
@@ -24,11 +24,11 @@
     "mocha": "^2.4.5",
     "require-all": "^2.0.0",
     "rimraf": "^2.5.2",
-    "uglifyjs": "^2.4.10"
+    "webpack": "^1.12.14"
   },
   "scripts": {
-    "build": "npm run clean && babel src --out-file dist/proto-moto.js && npm run uglify",
-    "uglify": "uglifyjs dist/proto-moto.js -m -c warnings=false -o dist/proto-moto.min.js",
+    "build": "npm run clean && webpack src/proto-moto.js dist/proto-moto.js && npm run build:min",
+    "build:min": "NODE_ENV=production webpack src/proto-moto.js dist/proto-moto.min.js",
     "clean": "rimraf dist && mkdir dist || true",
     "test": "npm run lint && mocha --compilers js:babel-register test/index.js",
     "lint": "jscs src && jscs test",
