--- a/package.json
+++ b/package.json
@@ -44,5 +44,13 @@
   "bugs": {
     "url": "https://github.com/fxmaxvl/proto-moto.js/issues"
   },
-  "homepage": "https://github.com/fxmaxvl/proto-moto.js#readme"
+  "homepage": "https://github.com/fxmaxvl/proto-moto.js#readme",
+  "npmFileMap": [
+    {
+      "basePath": "/dist/",
+      "files": [
+        "*.js"
+      ]
+    }
+  ]
 }
